[package]
name = "Buster_"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "NodeDB",
    "PoolSync",
]

[profile.release]
debug = true

[features]
verification = []

[dependencies]
alloy = { version = "0.15.4", features = ["full", "node-bindings", "providers", "rpc-client", "rpc-client-ipc", "rpc-types-debug", "rpc-types-trace", "eips"] }
alloy-chains = "^0.2"
alloy-consensus = "^0.15"
alloy-eips = "^0.15"
alloy-json-rpc = "^0.15"
alloy-network = "^0.15"
alloy-network-primitives = "^0.15"
alloy-node-bindings = "^0.15"
alloy-primitives = "^1.0.0"
alloy-pubsub = "^0.15 "
alloy-rpc-client = "^0.15"
alloy-rpc-types = "^0.15"
alloy-rpc-types-admin = "^0.15"
alloy-rpc-types-anvil = "^0.15"
alloy-rpc-types-debug = "^0.15"
alloy-rpc-types-engine = "^0.15"
alloy-rpc-types-eth = "^0.15"
alloy-rpc-types-trace = "^0.15"
alloy-rpc-types-txpool = "^0.15"
alloy-signer = "^0.15"
alloy-sol-types = "^1.0.0"
alloy-transport = "^0.15"
alloy-transport-http = "^0.15"
alloy-transport-ipc = "^0.15" 
alloy-transport-ws = "^0.15"
async-stream = "^0.3"
async-trait = "^0.1"
auto_impl = "^1.2"
dashmap = "^6.0"
either = "^1.15"
futures-utils-wasm = "^0.1"
lru = "^0.13"
pin-project = "^1.1"
thiserror = "^2.0"
tracing = "^0.1"
url = "^2.5"
alloy-serde = "^0.15" 
alloy-signer-local = "^0.15 "
ci_info = "0.14.14"
http = "1.1.0"
itertools = "0.14"
jsonrpsee = "^0.24"
env_logger = "0.11.5"
futures = { version = "0.3.31", features = ["executor"] }
node-db = { path = "NodeDB" }
pool-sync = { path = "PoolSync" }
log = "0.4.22"
petgraph = "0.8.1"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
lazy_static = "1.5.0"
uniswap_v3_math = "0.6.0"
dotenv = "0.15.0"
reqwest = "0.12.8"
zerocopy = "0.8.6"
rustc-hash = "2.0.0"
chrono = "0.4.38"
hyper = { version = "1.5.0", features = ["client"] }
hyper-tls = { version = "0.6.0", features = ["alpn"] }
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1", "http2"] }
http-body-util = "0.1.2"
bytes = "1.8.0"
foldhash = "0.1.3"
eyre = "0.6.12"

# Corrected revm dependency
revm = { version = "21.0.0", features = ["alloydb"] }
revm-inspectors = "0.20.1"
# Your reth dependencies pinned properly
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", package = "reth-db" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", package = "reth-chainspec" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", package = "reth-node-ethereum" }
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", package = "reth" }
