[package]
name = "Buster_"
version = "0.1.0"
edition = "2021"


[profile.release]
debug = true

[features]
verification = []

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
alloy = { version = "=0.15.10", features = ["full", "node-bindings", "providers", "rpc-client", "rpc-client-ipc", "rpc-types-debug", "rpc-types-trace", "eips"] }
alloy-primitives = "1.1.0"
alloy-provider = "=0.15.10"
alloy-network = "=0.15.10"
alloy-consensus = "=0.15.10"
alloy-signer = "=0.15.10"
alloy-rpc-types-eth = "=0.15.10"
axum = "0.8.4"
alloy-core = "=0.0.3"
revm = { version = "=21.0.0", features = ["alloydb"] }
revm-primitives = "=18.0.0"
revm-inspectors = "=0.20.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11.5"
chrono = "0.4"
dashmap = "6.0"
lazy_static = "1.4"
petgraph = "0.8.1"
hyper = { version = "1.5.0", features = ["client"] }
hyper-tls = { version = "0.6.0", features = ["alpn"] }
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1", "http2"] }
reqwest = "0.12.8"
url = "2.5"
foldhash = "0.1.3"
eyre = "0.6.12"
anyhow = "1.0.89"
thiserror = "2.0"
tracing = "0.1"
futures = { version = "0.3.31", features = ["executor"] }
futures-utils-wasm = "0.1"
itertools = "0.14"
jsonrpsee = "0.24"
lru = "0.13"
rayon = "1.10.0"
rustc-hash = "2.0.0"
sha2 = "0.10.8"
bytes = "1.8.0"
dotenv = "0.15.0"
async-stream = "0.3"
async-trait = "0.1"
http = "1.1.0"
http-body-util = "0.1.2"
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", package = "reth" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", package = "reth-db" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", package = "reth-chainspec" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8", package = "reth-node-ethereum" }
node-db = { git = "https://github.com/Zacholme7/NodeDB.git" }
pool-sync = { git = "https://github.com/Zacholme7/PoolSync.git" }
zerocopy = "0.8.6"
either = "1.15"
auto_impl = "1.2"
pin-project = "1.1"
ci_info = "0.14.14"
uniswap_v3_math = "0.6.0"
